# notes-backend

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: b48493b6371b_init.py
app/api/core/: authentication.py  config.py  crud.py  dependencies.py  session.py  utils.py
app/api/core/models/: base.py  notes.py  users.py
app/api/core/repository/: users.py
app/api/core/schemas/: notes.py  users.py
app/api/v1/: notes.py  router.py  users.py
